<resources>
    <string name="app_name">AndroidHomework</string>
    <string name="MyNotes">Здесь должны быть заметки</string>
    <string name="Next">NEXT 1</string>
    <string name="Next2">NEXT 2</string>
    <string name="Next3">NEXT 3</string>
    <string name="this_splashscreen">This SplashScreen</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Registration">Registration</string>
    <string name="SignIn">Sign in</string>
    <string name="LoginToast">Logged in</string>
    <string name="title_hint">Title</string>
    <string name="message_hint">Message</string>
    <string name="add_note_button_text">Add note</string>
    <string name="delete_button">delete note</string>
    <string name="share_button">Share</string>
    <string name="notes_list">List of notes</string>
    <string name="add_note">Add note</string>
    <string name="add_image">Add image</string>
</resources>